crates/takusu-agent/tests/snapshots/schema_snapshots__tool_get_settings.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Get server timezone and sleep/work settings.",
    "name": "get_settings",
    "parameters": {
      "additionalProperties": false,
      "properties": {},
      "type": "object"
    }
  },
  "type": "function"
}
