crates/takusu-agent/tests/snapshots/schema_snapshots__tool_list_habits.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "List all habits.",
    "name": "list_habits",
    "parameters": {
      "additionalProperties": false,
      "properties": {},
      "type": "object"
    }
  },
  "type": "function"
}
