crates/takusu-agent/tests/snapshots/schema_snapshots__tool_memory_delete.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Propose deleting a memory.",
    "name": "memory_delete",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "inferred_fields": {
          "description": "Fields inferred from user input.",
          "items": {
            "additionalProperties": false,
            "properties": {
              "field": {
                "description": "Name of the inferred field.",
                "type": "string"
              },
              "reason": {
                "description": "Reason the field was inferred.",
                "type": "string"
              },
              "value": {
                "description": "Inferred value for the field."
              }
            },
            "required": [
              "field",
              "value",
              "reason"
            ],
            "type": "object"
          },
          "type": "array"
        },
        "memory_ref": {
          "description": "Memory ID (from memory_search).",
          "type": "string"
        },
        "observed_revision": {
          "type": "integer"
        },
        "proposal_id": {
          "description": "Optional proposal id. Set the same value across multiple related tool calls to group them into a single proposal for review.",
          "type": "string"
        },
        "warnings": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "why": {
          "type": "string"
        }
      },
      "required": [
        "memory_ref",
        "observed_revision"
      ],
      "type": "object"
    }
  },
  "type": "function"
}
