crates/takusu-agent/tests/snapshots/schema_snapshots__tool_memory_save.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Propose saving a memory (proper noun, fact, or task note). Generates an approval request; does not write immediately.",
    "name": "memory_save",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "content": {
          "description": "Detailed content.",
          "type": "string"
        },
        "inferred_fields": {
          "description": "Fields inferred from user input.",
          "items": {
            "additionalProperties": false,
            "properties": {
              "field": {
                "description": "Name of the inferred field.",
                "type": "string"
              },
              "reason": {
                "description": "Reason the field was inferred.",
                "type": "string"
              },
              "value": {
                "description": "Inferred value for the field."
              }
            },
            "required": [
              "field",
              "value",
              "reason"
            ],
            "type": "object"
          },
          "type": "array"
        },
        "key": {
          "description": "Short identifier or term.",
          "type": "string"
        },
        "kind": {
          "description": "proper_noun, fact, or task_note.",
          "type": "string"
        },
        "proposal_id": {
          "description": "Optional proposal id. Set the same value across multiple related tool calls to group them into a single proposal for review.",
          "type": "string"
        },
        "subject_id": {
          "description": "Optional task ID when subject_type is 'task'.",
          "type": "string"
        },
        "subject_type": {
          "description": "Optional. For task_note set to 'task'.",
          "type": "string"
        },
        "warnings": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "why": {
          "description": "Short user-facing reason.",
          "type": "string"
        }
      },
      "required": [
        "kind",
        "key",
        "content"
      ],
      "type": "object"
    }
  },
  "type": "function"
}
