crates/takusu-agent/tests/snapshots/schema_snapshots__tool_memory_update.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Propose updating a memory's content. Generates an approval request; does not write immediately.",
    "name": "memory_update",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "content": {
          "type": "string"
        },
        "inferred_fields": {
          "description": "Fields inferred from user input.",
          "items": {
            "additionalProperties": false,
            "properties": {
              "field": {
                "description": "Name of the inferred field.",
                "type": "string"
              },
              "reason": {
                "description": "Reason the field was inferred.",
                "type": "string"
              },
              "value": {
                "description": "Inferred value for the field."
              }
            },
            "required": [
              "field",
              "value",
              "reason"
            ],
            "type": "object"
          },
          "type": "array"
        },
        "memory_ref": {
          "description": "Memory ID (from memory_search).",
          "type": "string"
        },
        "observed_revision": {
          "type": "integer"
        },
        "warnings": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "why": {
          "type": "string"
        }
      },
      "required": [
        "memory_ref",
        "observed_revision",
        "content"
      ],
      "type": "object"
    }
  },
  "type": "function"
}
